fix: styling improvements
- added background watermark image to magmo.com
- added hover state for text CTAs on project page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 $c-black: #323131;
 $c-white: #fff;
 $c-blue: #ad5235;
+$c-blue-link: #f06000;
 $c-darkgrey: #707070;
 $c-lightgrey: #e6e6e6;
 $c-editor-bg: #f7f9fa;
