--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -122,7 +122,7 @@
       margin:0;
       padding-bottom:8px;
       position:absolute;
-      text-align:center;
+      text-align:right;
       list-style:none;
       display:flex;
       flex-direction: column;
