fix: SC apps content update
- Rearranged state channels apps list to put more emphasis on web3torrent

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -32,6 +32,25 @@
   }
 }
 
+.app__logos {
+  max-height:2rem;
+  margin:0;
+  /*
+  background: url('https://web3torrent.statechannels.org/assets/logo.svg') no-repeat;
+  background-size: contain;
+  background-position: center;
+  
+  text-align: center;
+*/
+}
+
+.header-logo-hidden {
+  height: 1px;
+  width: 1px;
+  position: absolute;
+  overflow: hidden;
+  top: -10px;
+}
 
 @media screen and (max-width: $screen-tablet) {
   .section--lg {
