--- a/app/styles/components/hero.scss
+++ b/app/styles/components/hero.scss
@@ -32,7 +32,16 @@
   line-height: 1.6;
   color: $c-darkgrey;
 
+&__middle {
+  text-align: center;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+}
+
   ul{
+    /* unordered list of items within a hero__body*/
     list-style: none;
   }
 }
@@ -80,6 +89,10 @@
   .hero__body {
     margin: 1.5rem;
   
+    &__middle {
+      margin: 1.5rem;
+    }
+
   }
 
   .hero__body__list {
@@ -87,3 +100,4 @@
   
   }
 }
+
