--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,6 +23,7 @@ $screen-md: 1000px;
 $screen-tablet: 767px;
 $screen-mobile: 600px;
 $screen-xs: 374px;
+$screen-1024: 1439px;
 
 // Transitions
 $transition-speed: 200ms;
