--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -125,11 +125,10 @@
 
     &__left {
       display: flex;
-      flex-direction: column;
       margin-bottom: 1rem;
 
       &__text {
-        margin-top: 1rem;
+        margin-top: 0;
         margin-left: 0;
         text-align: center;
       }
