fixed dropdown for contacts

--- a/app/styles/components/mobile-menu.scss
+++ b/app/styles/components/mobile-menu.scss
@@ -13,6 +13,7 @@
 
   &--open {
     display: flex;
+    text-align: center;
   }
 
   &__close {
@@ -32,10 +33,16 @@
     }
   }
 
+  &__level1 {
+    display:none;
+    margin:1.5rem 0;
+    }
+
   &__item {
     font-size: $f-base;
     color: $c-lightgrey;
     font-weight: 300;
+    padding-top: 1.5rem;
 
     &.active {
       position: relative;
@@ -71,6 +78,7 @@
     color: $c-lightgrey;
     font-weight: 300;
     padding-left: 1rem;
+    padding-top: 1rem;
 
     &.active {
       position: relative;
@@ -103,10 +111,39 @@
     color: $c-lightgrey;
     font-weight: 300;
     padding-left: 0;
+    padding-top:1.5rem;
     list-style: none;
   }
 
   > * + * {
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
+}
+
+
+
+toggle {
+  display:block;
+  padding: .25rem 1rem;
+  text-decoration:none;
+  border:none;
+}
+
+[id^=drop]:checked + ul {
+  display:flex;
+}
+
+toggle, [id^=drop] {
+  display:none;
+}
+
+ // ul ul a {
+ //   padding: 0 1.5rem;
+ // }
+
+  li > a:after { content: ' +'; }
+  li > a:only-child:after { content: ''; }
+
+dropdown-format {
+  text-align: center;
 }
