slack url, c-blue to c-orange, mobile menu

--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -35,7 +35,7 @@ img {
 }
 
 a {
-  color: $c-blue;
+  color: $c-orange;
   text-decoration: none;
   cursor: pointer;
   transition: color $transition-speed;
