--- a/app/styles/components/callout.scss
+++ b/app/styles/components/callout.scss
@@ -28,7 +28,7 @@
   width: 100%;
   transform: translateY(-50%);
   z-index: 1;
-  // color: $c-blue;
+  // color: $c-orange;
 
   &__content {
     max-width: 50rem;
