--- a/app/styles/components/hero.scss
+++ b/app/styles/components/hero.scss
@@ -6,7 +6,7 @@
   @include f-heading;
   margin-bottom: 2.25rem;
   font-weight: normal;
-  color: $c-blue;
+  color: $c-orange;
 }
 
 .hero__subheading {
@@ -56,9 +56,9 @@
 }
 
 .hero__cta {
-  color: $c-blue;
+  color: $c-orange;
   &:hover {
-    color: $c-blue-link;
+    color: $c-orange-link;
   }
 }
 
