--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -37,12 +37,12 @@
       transition: color $transition-speed;
 
       &:hover {
-        color: $c-blue;
+        color: $c-orange;
       }
 
       &.active {
         position: relative;
-        color: $c-blue;
+        color: $c-orange;
 
         &::before {
           position: absolute;
@@ -51,7 +51,7 @@
           bottom: -0.5rem;
           width: 65%;
           height: 1px;
-          background-color: $c-blue;
+          background-color: $c-orange;
           content: "";
         }
       }
@@ -92,13 +92,13 @@
       transition: color $transition-speed;
 
       &:hover {
-        color: $c-blue;
+        color: $c-orange;
         display: block;
       }
 
       &.active {
         position: relative;
-        color: $c-blue;
+        color: $c-orange;
 
         &::before {
           position: absolute;
@@ -107,7 +107,7 @@
           bottom: -0.5rem;
           width: 65%;
           height: 1px;
-          background-color: $c-blue;
+          background-color: $c-orange;
           content: '';
         }
       }
@@ -148,13 +148,13 @@
       transition: color $transition-speed;
 
       &:hover {
-        color: $c-blue;
+        color: $c-orange;
         display: block;
       }
 
       &.active {
         position: relative;
-        color: $c-blue;
+        color: $c-orange;
 
         &::before {
           position: absolute;
@@ -163,7 +163,7 @@
           bottom: -0.5rem;
           width: 65%;
           height: 1px;
-          background-color: $c-blue;
+          background-color: $c-orange;
           content: '';
         }
       }
