--- a/app/styles/pages/standards.scss
+++ b/app/styles/pages/standards.scss
@@ -3,7 +3,7 @@
     @include f-heading;
     margin-bottom: 0.25rem;
     font-weight: normal;
-    color: $c-blue;
+    color: $c-orange;
   }
 
   .date {
