--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Chivo', sans-serif;
+  font-family: "Chivo", sans-serif;
   font-size: $f-rem;
   color: $c-black;
   background: $c-white;
