--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -1,6 +1,6 @@
 .section--nav {
   padding: 1rem;
-  z-index: 100;
+  z-index:100;
 }
 
 .nav {
@@ -37,12 +37,12 @@
       transition: color $transition-speed;
 
       &:hover {
-        color: $c-blue;
+        color: $c-orange;
       }
 
       &.active {
         position: relative;
-        color: $c-blue;
+        color: $c-orange;
 
         &::before {
           position: absolute;
@@ -51,7 +51,7 @@
           bottom: -0.5rem;
           width: 65%;
           height: 1px;
-          background-color: $c-blue;
+          background-color: $c-orange;
           content: "";
         }
       }
@@ -59,33 +59,32 @@
   }
 
   &__dropdown__papers {
-    list-style: none;
-    float: right;
+    list-style:none;
+    float:right;
 
     &__list {
-      padding-top: 8px;
-      margin: 0;
-      padding-bottom: 8px;
-      position: absolute;
-      text-align: left;
-      list-style: none;
-      display: flex;
+      padding-top:8px;
+      margin:0;
+      padding-bottom:8px;
+      position:absolute;
+      text-align:left;
+      list-style:none;
+      display:flex;
       flex-direction: column;
-      padding-left: 1.5rem;
+      padding-left:1.5rem;
       background-color: white;
     }
 
     &__list {
-      display: none;
+      display:none;
     }
 
-    &:hover &__list,
-    &__list:hover {
-      display: block;
+    &:hover &__list, &__list:hover{
+      display:block;
     }
 
     &__item {
-      position: relative;
+      position:relative;
       line-height: 30px;
       font-size: 1.125rem;
       color: $c-black;
@@ -93,13 +92,13 @@
       transition: color $transition-speed;
 
       &:hover {
-        color: $c-blue;
+        color: $c-orange;
         display: block;
       }
 
       &.active {
         position: relative;
-        color: $c-blue;
+        color: $c-orange;
 
         &::before {
           position: absolute;
@@ -108,40 +107,40 @@
           bottom: -0.5rem;
           width: 65%;
           height: 1px;
-          background-color: $c-blue;
-          content: "";
+          background-color: $c-orange;
+          content: '';
         }
       }
     }
   }
 
   &__dropdown {
-    list-style: none;
+    list-style:none;
 
     &__list {
-      padding-top: 8px;
-      margin: 0;
-      padding-bottom: 8px;
-      position: absolute;
-      text-align: right;
-      list-style: none;
-      display: flex;
+      padding-top:8px;
+      margin:0;
+      padding-bottom:8px;
+      position:absolute;
+      text-align:right;
+      list-style:none;
+      display:flex;
       flex-direction: column;
-      padding-left: 2.1875rem;
+      padding-left:2.1875rem;
       background-color: white;
+
     }
 
     &__list {
-      display: none;
+      display:none;
     }
 
-    &:hover &__list,
-    &__list:hover {
-      display: block;
+    &:hover &__list, &__list:hover{
+      display:block;
     }
 
     &__item {
-      position: relative;
+      position:relative;
       line-height: 30px;
       font-size: 1.125rem;
       color: $c-black;
@@ -149,13 +148,13 @@
       transition: color $transition-speed;
 
       &:hover {
-        color: $c-blue;
+        color: $c-orange;
         display: block;
       }
 
       &.active {
         position: relative;
-        color: $c-blue;
+        color: $c-orange;
 
         &::before {
           position: absolute;
@@ -164,8 +163,8 @@
           bottom: -0.5rem;
           width: 65%;
           height: 1px;
-          background-color: $c-blue;
-          content: "";
+          background-color: $c-orange;
+          content: '';
         }
       }
     }
