--- a/app/styles/components/callout.scss
+++ b/app/styles/components/callout.scss
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-position-x: 8rem;
   background-position-y: 5rem;
-  background-size: contain;
+  background-size:contain;
   > .container {
     position: relative;
     flex-grow: 1;
@@ -28,7 +28,7 @@
   width: 100%;
   transform: translateY(-50%);
   z-index: 1;
-  // color: $c-blue;
+  // color: $c-orange;
 
   &__content {
     max-width: 50rem;
@@ -85,7 +85,7 @@
   }
   .callout__content {
     &__buttons {
-      padding-left: 0;
+      padding-left:0;
       > * {
         width: 50%;
       }
