--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -51,7 +51,7 @@
           background-color: $c-orange;
           opacity: 0;
           transition: opacity $transition-speed;
-          content: '';
+          content: "";
         }
 
         &:hover::before {
@@ -73,7 +73,6 @@
   }
 }
 
-
 @media screen and (max-width: $screen-md) {
   .section--footer {
     padding: 2rem;
@@ -92,7 +91,7 @@
         margin-top: 1rem;
         margin-left: 0;
         text-align: center;
-        padding-left:1rem;
+        padding-left: 1rem;
       }
     }
 
@@ -111,7 +110,6 @@
   .footer-abstract--left {
     display: none;
   }
-
 }
 
 @media screen and (max-width: $screen-xs) {
@@ -149,5 +147,4 @@
   .footer-abstract--left {
     display: none;
   }
-
 }
