--- a/app/styles/components/mobile-menu.scss
+++ b/app/styles/components/mobile-menu.scss
@@ -22,10 +22,10 @@
     right: 1.5rem;
     color: $c-lightgrey;
     font-size: $f-sm;
-    font-family: 'Chivo', sans-serif;
+    font-family: "Chivo", sans-serif;
     font-weight: 300;
     cursor: pointer;
-    content: 'close';
+    content: "close";
 
     &:hover {
       color: $c-orange;
@@ -35,13 +35,12 @@
 
   &__level1 {
     //submenu section
-    display:none;
-    padding:0.125rem;
+    display: none;
+    padding: 0.125rem;
     border-color: $c-orange;
     border-style: none solid solid none;
-    margin:0.125rem 0.5rem 0.5rem 0;
-
-    }
+    margin: 0.125rem 0.5rem 0.5rem 0;
+  }
 
   &__item {
     font-size: $f-base;
@@ -61,10 +60,10 @@
         width: 65%;
         height: 1px;
         background-color: $c-lightgrey;
-        content: '';
+        content: "";
       }
     }
-    
+
     &:hover {
       color: $c-orange-link;
       transition: color $transition-speed;
@@ -81,7 +80,6 @@
       color: $c-lightgrey;
       font-weight: 300;
       padding: 0.125rem;
-    
 
       &:hover {
         color: $c-orange-link;
@@ -89,13 +87,13 @@
       }
     }
 
-    &__parent{
+    &__parent {
       //submenu parent
       font-size: $f-base;
       color: $c-lightgrey;
       font-weight: 300;
       padding-left: 0;
-      padding-top:1.5rem;
+      padding-top: 1.5rem;
       list-style: none;
     }
   }
@@ -105,23 +103,20 @@
   }
 }
 
-
-
 mobile-submenu-toggle {
-  display:block;
-  padding: .25rem 1rem;
-  text-decoration:none;
-  border:none;
+  display: block;
+  padding: 0.25rem 1rem;
+  text-decoration: none;
+  border: none;
 }
 
-[id^=drop]:checked + ul {
+[id^="drop"]:checked + ul {
   //dropdown submenu display
-  display:block;
+  display: block;
 }
 
-mobile-submenu-toggle, [id^=drop] {
+mobile-submenu-toggle,
+[id^="drop"] {
   //dropdown submenu hide
-  display:none;
+  display: none;
 }
-
-
