--- a/app/styles/components/callout.scss
+++ b/app/styles/components/callout.scss
@@ -1,10 +1,11 @@
 .callout-banner {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #cf2d20;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
   color: white;
+  text-align: center;
   padding: 8px 8px 10px;
 
   a {
